# eryx

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  _headers  dist-workspace.toml  eryx-sandbox.core.wasm  eryx-sandbox.core2.wasm  eryx-sandbox.core3.wasm  eryx-sandbox.core4.wasm  eryx-sandbox.core5.wasm  eryx-sandbox.core7.wasm  eryx-sandbox.core8.wasm  eryx-sandbox.core9.wasm  eryx-sandbox.js  index.html  index.js  mise.toml  release-plz.toml
.beads/: issues.jsonl
.config/: nextest.toml  rail.toml
.githooks/: pre-commit
.github/actions/mark-wasm-current/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: book.yml  ci.yml  js-release.yml  js.yml  python-release.yml  release-plz.yml  release.yml  upload-runtime.yml
book/: README.md  book.toml
book/.test-examples/python/: test_1.py  test_3.py  test_5.py  (+1 more)
book/.test-examples/rust/rust_batch_tests/: Cargo.toml
book/.test-examples/rust/rust_batch_tests/src/: main.rs  main.rs.tmp  test_0.rs  test_1.rs  test_2.rs  test_3.rs
book/scripts/: test_examples.py
book/src/: SUMMARY.md  contributing.md  introduction.md
crates/eryx/: Cargo.toml  README.md  build.rs  python-stdlib.tar.zst  wit
crates/eryx-check/: Cargo.toml
crates/eryx-check/src/: lib.rs  stubs.rs  tycheck.rs
crates/eryx-js-wasm-runtime/: .gitignore  Cargo.toml
crates/eryx-js-wasm-runtime/src/: lib.rs  quickjs.rs
crates/eryx-linker-wasm/: Cargo.toml
crates/eryx-linker-wasm/src/: lib.rs
crates/eryx-macros/: Cargo.toml
crates/eryx-macros/src/: lib.rs
crates/eryx-precompile/: Cargo.toml
crates/eryx-precompile/src/: main.rs
crates/eryx-python/: Cargo.toml  README.md  mise.toml  pyproject.toml
crates/eryx-python/examples/: callbacks.py  jinja2_preinit.py
crates/eryx-python/python/eryx/: __init__.py  __main__.py  _cli.py  _eryx.pyi  mcp.py  serve.py  wrap.py
crates/eryx-python/src/: callback.rs  error.rs  lib.rs  mcp.rs  net_config.rs  preinit.rs  resource_limits.rs  result.rs  sandbox.rs  session.rs  vfs.rs
crates/eryx-python/tests/: conftest.py  mock_mcp_server.py  test_callbacks.py  test_cli.py  test_fuel.py  test_http_libraries.py  test_mcp.py  test_sandbox.py  test_secrets_exfiltration.py  test_serve.py  test_session.py  test_vfs.py  test_volumes.py  test_wrap.py
crates/eryx-python/tests/fixtures/: markupsafe-3.0.2-cp314-cp314-wasi_0_0_0_wasm32.whl
crates/eryx-runtime/: Cargo.toml  README.md  build.rs  pyproject.toml  runtime.py  runtime.wit
crates/eryx-runtime/libs/: libc++.so.zst  libc++abi.so.zst  libc.so.zst  libcomponentize_py_runtime_async.so.zst  libcomponentize_py_runtime_sync.so.zst  libwasi-emulated-getpid.so.zst  libwasi-emulated-mman.so.zst  libwasi-emulated-process-clocks.so.zst  libwasi-emulated-signal.so.zst  wasi_snapshot_preview1.reactor.wasm.zst
crates/eryx-runtime/prebuilt/: liberyx_bindings.so.zst  liberyx_runtime.so.zst
crates/eryx-runtime/src/: lib.rs  linker.rs  preinit.rs  stubwasi.rs
crates/eryx-runtime/wit/: runtime.wit
crates/eryx-server/: Cargo.toml  Dockerfile  build.rs
crates/eryx-server/proto/eryx/v1/: eryx.proto
crates/eryx-server/src/: callbacks.rs  lib.rs  main.rs  output.rs  replay.rs  service.rs  telemetry.rs  trace.rs
crates/eryx-server/tests/: check_e2e.rs  grpc_e2e.rs  grpc_tls.rs
crates/eryx-vfs/: Cargo.toml  README.md
crates/eryx-vfs/src/: bindings.rs  error.rs  host.rs  hybrid.rs  hybrid_bindings.rs  hybrid_host.rs  lib.rs  linker.rs  scrubbing.rs  storage.rs  streams.rs  wasi_impl.rs
crates/eryx-wasm-runtime/: Cargo.toml  README.md  build.sh  clock_stubs.c
crates/eryx-wasm-runtime/plans/: code-cleanup-and-safety.md  implementation-status.md  numpy-native-extensions.md
crates/eryx-wasm-runtime/python/: componentize_py_runtime.py  componentize_py_types.py
crates/eryx-wasm-runtime/python/componentize_py_async_support/: __init__.py  futures.py
crates/eryx-wasm-runtime/src/: lib.rs  python.rs
crates/eryx-wasm-runtime/tests/: link_test.rs  runtime_test.rs
crates/eryx/benches/: execution.rs
crates/eryx/examples/: custom_library.rs  embedded_runtime.rs  error_handling.rs  jinja2_sandbox.rs  memory_bench.rs  numpy_native.rs  numpy_preinit.rs  package_loading.rs  parallel_callbacks.rs  parallel_test.rs  precompile.rs  profile_execution.rs  resource_limits.rs  result_capture.rs  runtime_callbacks.rs  session_bench.rs  session_reuse.rs  simple.rs  trace_events.rs  with_tracing.rs
crates/eryx/src/: cache.rs  callback.rs  callback_handler.rs  embedded.rs  embedded_stdlib.rs  error.rs  language.rs  lib.rs  library.rs  llm.rs  net.rs  network.rs  package.rs  pool.rs  replay.rs  sandbox.rs  schema.rs  secrets.rs  trace.rs  wasm.rs
crates/eryx/src/session/: executor.rs  in_process.rs  mod.rs  persistence.rs  registry.rs
crates/eryx/tests/: README.md  callback_macro.rs  callback_replay.rs  embedded_and_packages.rs  error_handling.rs  execution_cancellation.rs  fuel_limits.rs  preinit.rs  result_field.rs  sandbox_callbacks.rs  secrets_exfiltration_security.rs  secrets_integration_test.rs  session_persistence.rs  session_state_persistence.rs  socket_bypass_security.rs  tls_networking.rs  trace_events_precise.rs  trace_output_handlers.rs  vfs_bypass_security.rs
crates/wit-dylib-ffi/: Cargo.toml
crates/wit-dylib-ffi/src/: lib.rs  types.rs
docs/: api-usability-design.md  cargo-rail-plan.md  eryx-architecture.md  eryx-wasm-runtime-implementation.md  feature-simplification-plan.md  memory-measurement-plan.md  native-extensions-research.md  optimizations-preinit-caching.md
docs/plans/: skipped-tests.md  tracing-implementation.md
js/: mise.toml  patch-jco.cjs
js/demo/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js/eryx/: README.md  index.d.ts  index.js  package-lock.json  package.json  stdlib-loader.js
js/eryx-sandbox/: demo.html  index.d.ts  index.js  package.json
js/testpkg/: callbacks.test.ts  package-lock.json  package.json  sandbox.test.ts  vitest.config.ts
scripts/: bump-version.sh
shims/: callbacks.d.ts  sockets.js
(+38 files in other folders)
