[workspace]
resolver = "2"
members = ["crates/*"]

# Dev tools (install via cargo or mise):
# - cargo-nextest: Fast test runner (`cargo nextest run`)

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sd2k/eryx"
authors = ["Ben Sully <ben.sully88@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
futures-concurrency = "7.6"
futures-lite = "2.6"
lending-stream = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# JSON Schema
schemars = "1.0.0-alpha.17"

# WebAssembly runtime (v39+ required for async component model)
wasmtime = { version = "39", features = ["component-model", "async"] }
wasmtime-wasi = "39"

# Utilities
tracing = "0.1"
crossterm = "0.28"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Compression
zstd = "0.13"

# WebAssembly component linking and WIT parsing
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "e2bb0a24" }
wit-dylib = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "e2bb0a24" }
wit-parser = { git = "https://github.com/bytecodealliance/wasm-tools", rev = "e2bb0a24" }

# wit-dylib FFI for implementing interpreter interface (from dicej's fork)
wit-dylib-ffi = { git = "https://github.com/dicej/wasm-tools", rev = "b072b0ca", features = ["async-raw"] }

# Internal crates
eryx = { path = "crates/eryx" }

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
# Priority -1 ensures this lint group is applied before individual lints,
# avoiding clippy::lint_groups_priority warning about ambiguous ordering.
rust_2018_idioms = { level = "warn", priority = -1 }
# Note: unsafe_code lint is handled per-crate in lib.rs, not at workspace level.
# The eryx crate uses `forbid(unsafe_code)` by default, relaxed to `deny` when
# the `precompiled` feature is enabled.

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"
expect_used = "warn"

# See https://nnethercote.github.io/perf-book/build-configuration.html
[profile.release]
codegen-units = 1
lto = false

[profile.profiling]
inherits = "release"
debug = true
