[package]
name = "eryx-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python bindings for the Eryx sandbox"
readme = "README.md"
keywords = ["python", "sandbox", "wasm", "webassembly", "pyo3"]
categories = ["development-tools", "wasm", "api-bindings"]

[lib]
name = "_eryx"
crate-type = ["cdylib"]

[dependencies]
eryx = { path = "../eryx", features = ["embedded", "native-extensions"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
serde_json.workspace = true
walkdir.workspace = true

[build-dependencies]
pyo3-build-config = "0.24"

[lints]
workspace = true
