[package]
name = "eryx-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python bindings for the Eryx sandbox"
readme = "README.md"
keywords = ["python", "sandbox", "wasm", "webassembly", "pyo3"]
categories = ["development-tools", "wasm", "api-bindings"]
publish = false

[lib]
name = "_eryx"
crate-type = ["cdylib"]

[dependencies]
async-trait.workspace = true
eryx = { workspace = true, features = ["macros", "native-extensions", "vfs"] } #unified
pyo3 = { workspace = true, features = ["abi3-py312"] }
pyo3-async-runtimes.workspace = true
pythonize.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-io"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
walkdir.workspace = true

[build-dependencies]
pyo3-build-config = "0.27"

[lints]
workspace = true
