[package]
name = "eryx-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Python WASM runtime component for the eryx sandbox"
readme = "README.md"

# This crate contains the WIT definition and builds the WASM component.
# The component uses our custom eryx-wasm-runtime (liberyx_runtime.so)
# instead of componentize-py's runtime.

[dependencies]

[build-dependencies]
wit-dylib.workspace = true
wit-component.workspace = true
wit-parser.workspace = true

[lints]
workspace = true
