[package]
name = "eryx-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "gRPC server for sandboxed Python execution via eryx"
publish = false

[dependencies]
eryx = { workspace = true, features = ["embedded", "vfs"] }
eryx-check = { path = "../eryx-check" }
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
prost.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-logfmt = "0.3"
tracing-opentelemetry.workspace = true
tracing-error.workspace = true
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
uuid = { workspace = true, features = ["v4"] }
dashmap.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["env"] }                                 #unified

[build-dependencies]
tonic-build.workspace = true

[lints]
workspace = true
