[package]
name = "eryx-vfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Virtual filesystem implementation for eryx sandbox"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes = "1"
cap-fs-ext = "3"
cap-std = "3"
fs-set-times = "0.20"
serde = { workspace = true, optional = true }
system-interface = { version = "0.27", features = ["cap_std_impls"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-io.workspace = true

[features]
## Derive serde `Serialize`/`Deserialize` on the snapshot types, enabling
## persistence of an `InMemoryStorage` snapshot to bytes.
serde = ["dep:serde"]

# The repo's feature-combinations CI runs `cargo check-all-features -- -p eryx`,
# which pins `-p eryx` while enumerating every workspace crate's features —
# so a non-eryx feature like this one is checked as `-p eryx --features serde`
# and errors ("package 'eryx' does not contain this feature"). Exclude it from
# the powerset; it's exercised directly by eryx-vfs's own tests + downstream.
[package.metadata.cargo-all-features]
denylist = ["serde"]

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
