[package]
name = "eryx-wasm-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM guest runtime for eryx sandbox - implements WIT exports via CPython"
readme = "README.md"

# Build as staticlib, then use WASI SDK clang to create .so
# This matches how componentize-py builds their runtime
[lib]
crate-type = ["staticlib"]

[dependencies]
wit-dylib-ffi.workspace = true

# PyO3 for Python C extension module (like componentize-py uses)
# abi3-py312 = stable ABI compatible with Python 3.12+
pyo3 = { version = "0.24", features = ["abi3-py312"] }

[dev-dependencies]
wit-component.workspace = true
wit-parser.workspace = true
wit-dylib.workspace = true
zstd.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
