[package]
name = "eryx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A Python sandbox with async callbacks powered by WebAssembly"
readme = "README.md"
keywords = ["python", "sandbox", "wasm", "webassembly", "async"]
categories = ["development-tools", "wasm"]

[[bench]]
name = "execution"
harness = false

[[example]]
name = "embedded_runtime"
required-features = ["embedded-runtime"]

[[example]]
name = "precompile"
required-features = ["precompiled"]

[[example]]
name = "trace_events"
required-features = ["embedded-runtime"]

[[example]]
name = "numpy_native"
required-features = ["native-extensions"]

[features]
default = []
# Enable loading pre-compiled WASM components. This feature enables unsafe code paths
# because wasmtime cannot fully validate pre-compiled components for safety.
# Without this feature, the crate uses `forbid(unsafe_code)`.
precompiled = []
# Pre-compile and embed the runtime WASM at build time for ~50x faster sandbox creation.
# Requires runtime.wasm to be built before compiling this crate.
# Implies `precompiled` feature.
embedded-runtime = ["precompiled", "dep:wasmtime"]
# Enable native Python extension support via late-linking.
# This allows adding extensions like numpy at sandbox creation time.
native-extensions = ["dep:eryx-runtime"]

[dependencies]
tokio = { workspace = true, features = ["sync"] }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tracing.workspace = true
# Native extension support (optional)
eryx-runtime = { path = "../eryx-runtime", features = ["late-linking"], optional = true }

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion.workspace = true
crossterm.workspace = true
walkdir = "2.5"

[build-dependencies]
wasmtime = { workspace = true, optional = true }

[lints]
workspace = true
