[package]
name = "eryx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "A Python sandbox with async callbacks powered by WebAssembly"
readme = "README.md"
keywords = ["python", "sandbox", "wasm", "webassembly", "async"]
categories = ["development-tools", "wasm"]

[[bench]]
name = "execution"
harness = false

[[example]]
name = "embedded_runtime"
required-features = ["embedded"]

[[example]]
name = "precompile"
required-features = ["embedded"]

[[example]]
name = "trace_events"
required-features = ["embedded"]

[[example]]
name = "numpy_native"
required-features = ["native-extensions"]

[[example]]
name = "numpy_preinit"
required-features = ["native-extensions", "embedded"]

[[example]]
name = "session_bench"
required-features = ["native-extensions", "embedded"]

[[example]]
name = "package_loading"
required-features = ["native-extensions", "embedded"]

[dependencies]
tokio = { workspace = true, features = ["sync"] }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
tracing.workspace = true
sha2.workspace = true
# Package support (always enabled)
zip.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
walkdir.workspace = true
# Embedded runtime/stdlib (optional)
zstd = { workspace = true, optional = true }
# Native extension support (optional)
eryx-runtime = { path = "../eryx-runtime", optional = true }

[features]
default = []
# Zero-config sandboxes: pre-compiled runtime + stdlib embedded in binary.
# Enables unsafe code paths for wasmtime's pre-compiled component loading.
# Without this feature, the crate uses `forbid(unsafe_code)`.
embedded = ["dep:zstd"]
# Native Python extension support via late-linking and pre-initialization.
# Allows adding extensions like numpy at sandbox creation time.
# Includes pre-init for capturing Python's memory state for faster startup.
native-extensions = ["dep:eryx-runtime", "eryx-runtime/native-extensions"]

[dev-dependencies]
async-trait.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion.workspace = true
crossterm.workspace = true

[build-dependencies]
wasmtime.workspace = true

[lints]
workspace = true

[package.metadata."docs.rs"]
all-features = true

[package.metadata.cargo-all-features]
# Skip feature combinations that require the WASM runtime to be built first.
# native-extensions requires liberyx_runtime.so.zst which is only available
# after running `mise run build-eryx-runtime`.
skip_feature_sets = [
    ["native-extensions"],
]
# With only 2 features, test all combinations (max 4)
max_combination_size = 2
